# basicai-proto

./: .gitignore
slg/: README.md  google-ads.yaml.example  langgraph.json  pyproject.toml
slg/blog_makearticle2/src/: graph.py  state.py  utils.py
slg/db/: aibow_customerTable - companies.csv  aibow_customerTable - customerpersonas.csv  aibow_customerTable - products.csv
